card align fix

--- a/css/components/_card.scss
+++ b/css/components/_card.scss
@@ -15,6 +15,8 @@
     min-height: 100%;
 
     position: relative;
+
+    justify-content: center;
 }
 
 .card.hoverable {
